

    4 - Preliminary GNOME compliance (see README.gnome and TODO.gnome)
	(by Rudolph T. Maceyko).

    5 - IconifyStyle : "normal" "mosaic" "zoomin" "zoomout" "sweep"

	A few 'fancy' graphical effects when you iconify windows, just for fun.

    6 - Jpeg images support : You can now use jpeg image files wherever you
	can use images. Use the jpeg:imagename syntaxe.

    7 - f.showbackground.

	Since we can now use fancy jpeg image for root backgrounds, this function
	unmaps all windows in the current workspace. This is a toggle function,
	if all windows are unmapped, they are all remapped. Better bind this
	function in the root context.

    8 - Preliminary support for Xinerama extention. You can define 'virtual'
	screens (it's better if they correspond to you actual screens). The
	thing is that you can see several workspaces at the sams time, one per
	virtual screen. Of course, you cannot view the same workspace (or the
	same window) in 2 vscreens at the same time. The syntax is :

VirtualScreens {
    "1280x1024+0+0"
    "1600x1200+1280+0"
}

	for 2 screens, the first one (on the left) is 1280x1024, the second one
	(on the right) is 1600x1200.

	This is preliminary, because this has not been extensively tested. I did
	this because I have now 2 screens, but I was unable to get them working
	properly, so I use only one.


    [ At this point, Claude has stopped working on CTWM, and the project
      is now in the hands of Richard Levitte <richard@levitte.org>. ]

    9 - Changed Imakefile to support a distribution target.

   10 - Changed :xpm:cross to become a bit larger and have a slightly more
	3D appearance, and is visible even in very dark configurations.

   11 - Make AlwaysSqueezeToGravity to work for all windows (if no window
	list is given).

   12 - New keyword: NoImagesInWorkSpaceManager

	If it's enabled, background images aren't displayed in the workspace
	map.

	This was contributed by Thomas Linden.
